<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ListView
    android:id="@+id/lview"
    android:layout_width="wrap_content"
        android:layout_weight="0.97"
        android:layout_below="@+id/bAnnule"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_height="500dp">
</ListView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtRecherche"
        android:hint="@string/votre_recherche"
        android:layout_above="@+id/bAnnule"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rechercher"
        android:id="@+id/bAjout"
        android:onClick="onClickRecherche"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/bAnnule"
        android:onClick="onClickRetour"
        android:layout_alignBaseline="@+id/bAjout"
        android:layout_alignBottom="@+id/bAjout"
        android:layout_toRightOf="@+id/bAjout"
        android:layout_toEndOf="@+id/bAjout"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

</RelativeLayout>
