<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Vue.Accueil">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNomM"
        android:hint="@string/nom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPrenomM"
        android:hint="@string/prenom"
        android:layout_below="@+id/txtNomM"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/bSuppr"
        android:layout_alignRight="@+id/txtNomM"
        android:layout_alignEnd="@+id/txtNomM" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/txtTelM"
        android:hint="@string/tel"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/txtPrenomM"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:id="@+id/bAnnule"
        android:onClick="onClickRetourRecherche"
        android:layout_alignBaseline="@+id/bSuppr"
        android:layout_alignBottom="@+id/bSuppr"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Supprimer"
        android:id="@+id/bSuppr"
        android:layout_alignBaseline="@+id/bModif"
        android:layout_alignBottom="@+id/bModif"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSuppr" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modifier"
        android:id="@+id/bModif"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txtTelM"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:onClick="onClickModif" />

</RelativeLayout>
